--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
                         <nav role="navigation" class="brix---header-menu-wrapper w-nav-menu">
                             <ul role="list" class="brix---header-nav-menu-list">
                                 <li class="brix---header-nav-list-item"><a
-                                        data-w-id="f5a9a90f-0fb6-76b1-1cc0-00ac60f5d6e1" href="/quienes-somos"
+                                        data-w-id="f5a9a90f-0fb6-76b1-1cc0-00ac60f5d6e1" href="/quienes-somos.html"
                                         class="link-nav-bar">Quiénes somos</a></li>
                                 <li class="brix---header-nav-list-item"><a
-                                        data-w-id="9efe8939-6f24-3605-a2ed-89a6ffe0c9d2" href="/que-hacemos"
+                                        data-w-id="9efe8939-6f24-3605-a2ed-89a6ffe0c9d2" href="/que-hacemos.html"
                                         class="link-nav-bar">Qué hacemos</a></li>
                                 <li class="brix---header-nav-list-item"><a
-                                        data-w-id="970eaa2f-70a3-a001-038e-dd01f8b4d840" href="/les-corts"
+                                        data-w-id="970eaa2f-70a3-a001-038e-dd01f8b4d840" href="/les-corts.html"
                                         class="link-nav-bar">Comercios</a></li>
                                 <li class="brix---header-nav-list-item"><a
-                                        data-w-id="5dfd0e29-5af5-e976-83c0-5e1eeacabf43" href="/colabora"
+                                        data-w-id="5dfd0e29-5af5-e976-83c0-5e1eeacabf43" href="/colabora.html"
                                         class="link-nav-bar">Colabora</a></li>
                                 <li class="brix---header-nav-list-item"><a
                                         href="https://drive.google.com/file/d/1maE0ERWl2XAOQJJMbqMziuLmlkXmfoYz/view"
