--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
         type="text/javascript"></script>
     <script src="./script3.js"
         type="text/javascript"></script>
+        <script>
+            $(document).ready(function() {$(".w-webflow-badge").removeClass("w-webflow-badge").empty(); });
+            </script>
 </body>
 
 </html>
