--- a/les-corts.html
+++ b/les-corts.html
@@ -28,7 +28,7 @@
         rel="apple-touch-icon" />
 </head>
 
-<body class="body-4">
+<body class="">
     <section class="section-17">
         <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
             role="banner" class="brix---header-wrapper w-nav">
