--- a/les-corts.html
+++ b/les-corts.html
@@ -103,6 +103,9 @@
         type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/6441c6ee3e75614ee82da141/js/webflow.c6be176a.1a5745df0577464a.js"
         type="text/javascript"></script>
+            <script>
+            $(document).ready(function() {$(".w-webflow-badge").removeClass("w-webflow-badge").empty(); });
+            </script>
 </body>
 
 </html>
