--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </div>
-        </div><a href="/colabora" data-w-id="20c818d8-3e4e-6e43-1ae1-173a5f1df75f" style="opacity:0" target="_blank"
+        </div><a href="/colabora.html" data-w-id="20c818d8-3e4e-6e43-1ae1-173a5f1df75f" style="opacity:0" target="_blank"
             class="blog-item-2 sorteo-anuncio mesa w-inline-block">
             <div class="blog-image-wrap"><img width="380"
                     sizes="(max-width: 479px) 73vw, (max-width: 767px) 76vw, (max-width: 991px) 42vw, 28vw" alt=""
